<resources>
    <string name="app_name">智慧运营测试版</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="pass">通过</string>
    <string name="modify">修改</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="recall">撤回</string>
    <string name="msg_recall_by_self">您撤回了一条消息</string>
    <string name="msg_recall_by_user">%1$s 撤回了一条消息</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="search_contanier">搜索："%s"</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="stop_record">停止录制</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="capture_image">抓取图片</string>
    <string name="record_finish_toast">录制完毕，文件存储在%s</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="video_call">[视频通话]</string>
    <string name="dynamic_expression">[动态表情]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="user_forbidden">用户被服务器限制连接</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="push_settings">消息推送设置</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="set_custom_appkey">自定义App key</string>
    <string name="set_custom_server">自定义server</string>
    <string name="session">消息</string>
    <string name="address_book">联系人</string>
    <string name="setting">设置</string>
    <string name="main">工作</string>
    <string name="four">待定</string>
    <string name="tpq">天鹏圈</string>
    <string name="person">我的</string>
    <string name="sure">确定</string>
    <string name="title_startMeeting">发起会议</string>
    <string name="meeting_topic">会议主题</string>
    <string name="startTime">开始时间</string>
    <string name="duration_assume">预计时长：</string>
    <string name="meetingTopic">请输入会议主题</string>
    <string name="choose_people">请选择参会人员：</string>
    <string name="choosing_people">选择参会人员</string>
    <string name="choose_recorder">请选择会议记录人：</string>
    <string name="choosing_recorder">选择会议记录人</string>
    <string name="input_duration">请输入预估时长（天）</string>
    <string name="set_starttime">设置开始时间</string>
    <string name="set_endtime">设置结束时间</string>
    <string name="select_time"><u>选择时间</u></string>
    <string name="record">会议记录人</string>
    <string name="title_meetingList"></string>
    <string name="item_startingtime">开始时间</string>
    <string name="item_endingtime">结束时间</string>
    <string name="item_duration_assume">预估时长（小时）</string>
    <string name="unfinished">未完成</string>
    <string name="topic_of_the_meeting">这次会议的主要内容有</string>
    <string name="people_came">参会人员：</string>
    <string name="attendance">考勤</string>
    <string name="startingtime">开始时间</string>
    <string name="endingtime">结束时间</string>
    <string name="auditor">审核人</string>
    <string name="chaosongren">抄送人</string>
    <string name="choose_renshi"><u>选择人事经理</u></string>
    <string name="choose_xiangmu"><u>选择项目经理</u></string>
    <string name="choose_zong"><u>选择总经理</u></string>
    <string name="choose_chaosongren"><u>选择抄送人</u></string>
    <string name="pleasse_choose_editor">选择审核人</string>
    <string name="choose_editor"><u>选择审核人</u></string>
    <string name="pleasse_choose_renshi">选择人事经理</string>
    <string name="pleasse_choose_xiangmu">选择项目经理</string>
    <string name="pleasse_choose_zong">选择总经理</string>
    <string name="pleasse_choose_chaosongren">选择抄送人</string>
    <string name="commit">提交</string>
    <string name="must">必填</string>
    <string name="duration">时长（小时）</string>
    <string name="myAttendance">我的考勤</string>
    <string name="choose_time"><u>选择时间</u></string>
    <string name="title_businessTrip">外出申请</string>
    <string name="tripDetails">外出行程</string>
    <string name="destination">出差地点</string>
    <string name="tripReason">出差原因</string>
    <string name="reasons_trip_putin">请输入出差事由</string>
    <string name="plan_reason">请输入计划事项</string>
    <string name="plan_destination">请输入计划地点</string>
    <string name="item_btn_add">增加外出行程</string>
    <string name="title_myTrip">我的外出</string>
    <string name="plan_index">计划%1$s</string>
    <string name="title_overtime">加班登记</string>
    <string name="type_overtime">选择加班类型</string>
    <string name="types_of_overtime"><u>选择加班类型</u></string>
    <string name="legal_holiday">法定节假日</string>
    <string name="weekend">周末</string>
    <string name="work_over">晚班</string>
    <string name="ways">核算方式</string>
    <string name="overtimeReason">加班原因</string>
    <string name="reasons_overtime_Putin">请输入加班原因</string>
    <string name="myOvertime">我的加班</string>
    <string name="title_leave">请假申请</string>
    <string name="leaveType"><u>请假类型</u></string>
    <string name="choose_leaveType">选择请假类型</string>
    <string name="leavingReason">请假原因</string>
    <string name="reasons_leaving_Putin">请输入请假原因</string>
    <string name="myLeave">我的请假</string>
    <string name="kq_destination">目的地：</string>
    <string name="kq_sqr">申请人：</string>
    <string name="kq_type">类别：</string>
    <string name="kq_duration">时长(天)：</string>
    <string name="kq_leaveType">%1$s类型：</string>
    <string name="kq_leibie"><u>选择类别</u></string>
    <string name="kq_leixing"><u>选择类型</u></string>
    <string name="kq_content">请输入标题（例：拜访某某某）</string>
    <string name="kq_start">开始：</string>
    <string name="kq_end">结束：</string>
    <string name="kq_choo_time"><u>选择时间</u></string>
    <string name="kq_allday">全天：</string>
    <string name="kq_xiangmu">项目经理：</string>
    <string name="kq_renshi">人事经理：</string>
    <string name="kq_zong">总经理：</string>
    <string name="kq_chaosong">抄送：</string>
    <string name="kq_chooshen"><u>选择审核人</u></string>
    <string name="kq_choochao"><u>选择抄送人</u></string>
    <string name="bq_type">补签类型：</string>
    <string name="bq_person">补签人员：</string>
    <string name="bq_time">补签时间：</string>
    <string name="bq_reason">补签原因：</string>
    <string name="bq_type_choo">选择补签类型：</string>
    <string name="bq_person_choo">选择补签人员：</string>
    <string name="bq_time_choo">选择补签时间：</string>
    <string name="bq_reason_choo">请输入补签原因</string>
    <string name="title_checkin">打卡</string>
    <string name="wonderland">一个很神奇的地方</string>
    <string name="click_tocheckin">%1$s点击打卡</string>
    <string name="succeed_checkin">打卡成功！</string>
    <string name="time_checkin">打卡类型:</string>
    <string name="location_checkin">打卡地点:</string>
    <string name="jiaban">加班：%1$s次</string>
    <string name="qingjia">请假：%1$s次</string>
    <string name="waiqin">外勤：%1$s次</string>
    <string name="attach">附件：</string>
    <string name="title_qrCode_type">请选择签到类型</string>
    <string name="text_qrCode">签到二维码</string>
    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>
    <string name="qr_click">点击签到</string>
    <string name="qr_team">点击签到</string>
    <string name="start_Buqian">发起补签</string>
    <string name="clock_record">打卡记录记录</string>
    <string name="summary">汇总</string>
    <string name="attendans_days">出勤天数：</string>
    <string name="vacation_days">休息天数：</string>
    <string name="late">迟到：</string>
    <string name="leave_early">早退：</string>
    <string name="absence">旷工：</string>
    <string name="bTrip">外勤：</string>
    <string name="del_xc">删除该行程？</string>
    <string name="announce_manager">公告管理</string>
    <string name="attachment">附件:</string>
    <string name="title_input">请输入标题</string>
    <string name="content_input">请输入内容</string>
    <string name="range_select">请选择发布范围</string>
    <string name="range_selected">发布类型： %1$s(已选)</string>
    <string name="official_announ">官方公告</string>
    <string name="department_announ">部门公告</string>
    <string name="project_announ">项目公告</string>
    <string name="this_is_attach"><u>这是一个附件</u></string>
    <string name="dialog_tip">正在加载数据...</string>
    <string name="title_main">高德定位SDK功能展示</string>
    <string name="title_location">获取定位数据</string>
    <string name="location">获取定位数据</string>
    <string name="location_dec">调用定位接口获取定位数据</string>
    <string name="title_geoFence">地理围栏</string>
    <string name="geoFence">地理围栏</string>
    <string name="geoFence_dec">展示地理围栏功能</string>
    <string name="roundGeoFence">圆形地理围栏</string>
    <string name="roundGeoFence_dec">展示圆形地理围栏</string>
    <string name="polygonGeoFence">多边形地理围栏</string>
    <string name="polygonGeoFence_dec">展示多边形地理围栏</string>
    <string name="keywordGeoFence">关键字地理围栏</string>
    <string name="keywordGeoFence_dec">展示关键字地理围栏</string>
    <string name="nearbyGeoFence">周边地理围栏</string>
    <string name="tv_select_time">请选择时间</string>
    <string name="old_pwd">旧    密    码</string>
    <string name="input_old_pwd">输入旧密码</string>
    <string name="new_pwd">新    密    码</string>
    <string name="input_new_pwd">输入新密码</string>
    <string name="again_pwd">再次输入</string>
    <string name="input_again_pwd">再次输入新密码</string>
    <string name="remark">备注</string>
    <string name="input_remark">请添加备注</string>
</resources>