<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    android:orientation="vertical"
    >

    <include layout="@layout/activity_head"></include>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="15dp"
        android:background="#ddd"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/old_pwd"
            android:textColor="#333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_oldmm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_old_pwd"
            android:inputType="textPassword"
            android:textColor="#333"
            android:textColorHint="#999" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#ddd"></View>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="15dp"
        android:background="#ddd"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/new_pwd"
            android:textColor="#333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_newmm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_new_pwd"
            android:inputType="textPassword"
            android:textColor="#333"
            android:textColorHint="#999" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#ddd"></View>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="15dp"
        android:background="#ddd"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/again_pwd"
            android:textColor="#333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_againmm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_again_pwd"
            android:inputType="textPassword"
            android:textColor="#333"
            android:textColorHint="#999" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#ddd"></View>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></View>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_sumbit"
        android:text="@string/modify"
        android:textColor="#fff"
        android:textSize="16sp" />

</LinearLayout>