<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="267dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/container_height_small"
        android:background="@drawable/alert_title_bg">

        <TextView
            android:id="@+id/alert_tv_title"
            style="@style/textView_common_blue"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/title_qrCode_type"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/alert_iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_snow"
            android:visibility="gone" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/alert_dia_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/space_3dp"
        android:layout_marginTop="@dimen/space_3dp"
        />

    <View style="@style/view_common"
        android:layout_height="1dp"
        android:background="@color/color_blue_common"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/alert_qr_confirm"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/alert_tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/cancel"
            android:textColor="@color/color_blue_common"
            android:textSize="16sp" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/color_blue_common"
            android:layout_marginBottom="2dp"
            />
        <TextView
            android:id="@+id/alert_tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/sure"
            android:textColor="@color/color_blue_common"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>